# SubtitlesToolboxMini

./: Cargo.toml  README.md  build.rs
assets/: app-logo.icns
src/: main.rs  main.slint
src/ui/: state.slint  theme.slint
translations/fr/LC_MESSAGES/: SubtitlesToolboxMini.po
translations/it/LC_MESSAGES/: SubtitlesToolboxMini.po
