[package]
name = "SubtitlesToolboxMini"
version = "1.0.1"
edition = "2021"

[dependencies]
slint = "1.9.0"
rfd = "0.12.1"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8.33"
webbrowser = "1.0"

[build-dependencies]
slint-build = "1.9.0"
winres = "0.1"

# --- CONFIGURATION POUR L'ICÔNE SUR MAC (.icns) ---
[package.metadata.bundle]
name = "Subtitles Toolbox mini"
identifier = "com.cinequoinone.subtitlestoolboxmini"
icon = ["assets/app-logo.icns"]
category = "Utility"

# --- CONFIGURATION POUR OUVRIR EXTENSION SUR MAC (.srt) ---
[[package.metadata.bundle.document_type]]
name = "SubRip"
role = "Editor" # "Editor" or "Viewer"
icon = "assets/app-logo.icns" # Icône shown on file
extensions = ["srt"] # Targeted extension
